--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "nanogram.js",
-  "version": "1.0.1",
+  "name": "@ease-live/nanogram.js",
+  "version": "1.1.1",
   "description": "An easy-to-use and simple Instagram package that allow you to fetch media content without API and access token.",
   "keywords": [
     "instagram",
@@ -9,6 +9,9 @@
     "instafeed",
     "instagram-api"
   ],
+  "publishConfig": {
+    "registry": "https://sixty.jfrog.io/sixty/api/npm/npm/"
+  },
   "main": "dist/nanogram.cjs.js",
   "module": "dist/nanogram.esm.js",
   "browser": {
@@ -78,6 +81,7 @@
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
     "babel-jest": "^25.3.0",
+    "cross-env": "^7.0.2",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-jest": "^23.8.2",
@@ -88,6 +92,7 @@
     "lint-staged": "^10.1.3",
     "lodash.capitalize": "^4.2.1",
     "minimist": "^1.2.5",
+    "nan": "^2.14.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.4",
     "rimraf": "^3.0.2",
